fix for landscape viewing on iPhone 6(s)

--- a/_sass/_drinksMenu.sass
+++ b/_sass/_drinksMenu.sass
@@ -13,7 +13,7 @@
   text-align: left
   // width: 450px
 
-@media screen and (max-width: 700px)
+@media screen and (max-width: 650px)
   .drink-item
     padding: 0 0 3px 3px
 
